--- a/style.css
+++ b/style.css
@@ -17,15 +17,16 @@ body {
 .container {
   display: flex;
   width: 90vw;
+  height: 90vh;
 }
 
 .panel {
   background-size: auto 100%;
   background-position: center;
   background-repeat: no-repeat;
-  height: 80vw;
+  height: 50vw;
   border-radius: 50px;
-  color: white;
+  color: rgb(240, 240, 240);
   cursor: pointer;
   flex: 0.5;
   margin: 10px;
@@ -34,10 +35,11 @@ body {
 }
 
 .panel h3 {
-  font-size: 24px;
+  font-size: 34px;
   position: absolute;
   bottom: 20px;
   left: 20px;
+  padding: 20px;
   margin: 0;
   opacity: 0;
 }
@@ -47,6 +49,20 @@ body {
 }
 
 .panel.active h3 {
+  opacity: 1;
+  transition: opacity 0.4s ease-in 0.4s;
+}
+
+.overhide {
+  background: rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  transition: opacity 0.25s ease-in 0s;
+  height: inherit;
+  width: inherit;
+  border-radius: inherit;
+}
+
+.overhide:hover {
   opacity: 1;
 }
 
@@ -58,5 +74,9 @@ body {
   .panel:nth-of-type(4),
   .panel:nth-of-type(5) {
     display: none;
+  }
+
+  .panel h3 {
+    font-size: 24px;
   }
 }
